Test change to html file

--- a/bucketgo.html
+++ b/bucketgo.html
@@ -3,9 +3,9 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+  <h1>Welcome to Bucket</h1>
 
-  {{> hello}}
+  {{> hello}} to you
 </body>
 
 <template name="hello">
